# QAudioCoder

./: Copyright.txt  License.txt  ReadMe.txt
code/: CMakeLists.txt
code/cmake/: FindQt5.cmake  Macros.cmake  Packaging.cmake  QAudioCoderConfig.cmake  Version.cmake
code/examples/: convert.cpp  decode_and_play.cpp  example1.cpp  record.cpp  record_and_save.cpp
code/headers/: qabstractcodec.h  qaudiochunk.h  qaudiocoder.h  qaudioinfo.h  qaudiomanager.h  qaudioresampler.h  qchannelconverter.h  qcodecchunk.h  qcodeccontent.h  qcodecexecutor.h  qcodecformat.h  qcodecinfo.h  qcodecmanager.h  qcodingchain.h  qcodingchaincomponent.h  qcommon.h  qextendedaudioformat.h  qflaccodec.h  qlamecodec.h  qsamplearray.h  qsamplechannelconverter.h  qsampleconverter.h  qsamplerateconverter.h  qsamplesizeconverter.h  qsharedbuffer.h
code/headers/codecs/: qaudiocodec.h  qflaccodec.h  qlamecodec.h  qmp3codec.h  qwavecodec.h
code/headers/coders/: qabstractcoder.h  qcodermanager.h  qflaccoder.h  qlamecoder.h  qwavecoder.h
code/sources/: qabstractcodec.cpp  qaudiochunk.cpp  qaudiocoder.cpp  qaudioinfo.cpp  qaudiomanager.cpp  qaudioresampler.cpp  qchannelconverter.cpp  qcodecchunk.cpp  qcodeccontent.cpp  qcodecexecutor.cpp  qcodecformat.cpp  qcodecinfo.cpp  qcodecmanager.cpp  qcodingchain.cpp  qcodingchaincomponent.cpp  qcommon.cpp  qextendedaudioformat.cpp  qflaccodec.cpp  qlamecodec.cpp  qsamplearray.cpp  qsamplechannelconverter.cpp  qsampleconverter.cpp  qsamplerateconverter.cpp  qsamplesizeconverter.cpp  qsharedbuffer.cpp
code/sources/codecs/: qaudiocodec.cpp  qflaccodec.cpp  qlamecodec.cpp  qmp3codec.cpp  qwavecodec.cpp
code/sources/coders/: qabstractcoder.cpp  qcodermanager.cpp  qflaccoder.cpp  qlamecoder.cpp  qwavecoder.cpp
other/: adapt  revert
